--- a/src/qsomatch/Rakefile
+++ b/src/qsomatch/Rakefile
@@ -3,7 +3,7 @@
 require "rubygems"
 require "hoe"
 
-# Hoe.plugin :compiler
+Hoe.plugin :compiler
 # Hoe.plugin :cucumberfeatures
 # Hoe.plugin :gem_prelude_sucks
 # Hoe.plugin :inline
@@ -20,9 +20,12 @@ Hoe.spec "qsomatch" do
   # you'll never have to touch them again!
   # (delete this comment too, of course)
 
-  # developer("FIX", "FIX@example.com")
+  developer("Tom Epperly", "tepperly@gmail.com")
+  self.spec_extras = { :extensions => [ "ext/qsomatch/extconf.rb"]}
 
-  # license "MIT" # this should match the license in the README
+  license "MIT" # this should match the license in the README
+  self.extra_dev_deps << ['rake-compiler', '>= 0']
 end
+Rake::Task[:test].prerequisites << :compile
 
 # vim: syntax=ruby
