--- a/src/qsomatch/Rakefile
+++ b/src/qsomatch/Rakefile
@@ -3,7 +3,7 @@
 require "rubygems"
 require "hoe"
 
-Hoe.plugin :compiler
+Hoe.plugin :Compiler
 # Hoe.plugin :cucumberfeatures
 # Hoe.plugin :gem_prelude_sucks
 # Hoe.plugin :inline
@@ -26,6 +26,6 @@ Hoe.spec "qsomatch" do
   license "MIT" # this should match the license in the README
   self.extra_dev_deps << ['rake-compiler', '>= 0']
 end
-Rake::Task[:test].prerequisites << :compile
+Rake::Task[:test].prerequisites << :Compile
 
 # vim: syntax=ruby
